--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.4.3'
 	id 'io.spring.dependency-management' version '1.1.7'
-	id 'com.diffplug.spotless' version '6.18.0'
+	id 'io.freefair.lombok' version '8.13.1'
 }
 
 group = 'io.autoinvestor'
@@ -21,17 +21,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+	implementation platform("com.google.cloud:spring-cloud-gcp-dependencies:6.1.1")
+	implementation 'com.google.cloud:spring-cloud-gcp-starter-pubsub'
+	implementation 'org.springframework.integration:spring-integration-core'
+
+	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+	testImplementation 'org.testcontainers:testcontainers'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'org.testcontainers:gcloud'
 }
 
 tasks.named('test') {
 	useJUnitPlatform()
-}
-
-spotless {
-	java {
-		googleJavaFormat('1.25.0')
-		eclipse().configFile 'config/eclipse-java-formatter.xml'
-	}
 }
 
 bootBuildImage {
