--- a/build.gradle
+++ b/build.gradle
@@ -40,12 +40,12 @@ tasks.named('test') {
 }
 
 bootBuildImage {
-	imageName = "${System.getenv("DOCKER_USERNAME")}/autoinvestor-${rootProject.name}:${System.getenv("DOCKER_IMAGE_VERSION")}"
+	imageName = "${System.getenv("DOCKER_NAMESPACE")}/autoinvestor-${rootProject.name}:${System.getenv("DOCKER_IMAGE_VERSION")}"
 	docker {
 		publishRegistry {
 			username = System.getenv("DOCKER_USERNAME")
 			password = System.getenv("DOCKER_PASSWORD")
-			url = "https://index.docker.io/v1/"
+			url = System.getenv("DOCKER_REGISTRY")
 		}
 	}
 	publish = true
