--- a/.github/workflows/post-commit-pipeline.yml
+++ b/.github/workflows/post-commit-pipeline.yml
@@ -72,12 +72,24 @@ jobs:
       - name: Build & Test
         run: ./gradlew clean build
 
-      - name: Build & push docker image
+      - name: Build & push docker image (legacy)
         if: steps.version_increment.outputs.bump != 'none'
         env:
+          DOCKER_REGISTRY: "https://index.docker.io/v1/"
+          DOCKER_NAMESPACE: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKER_IMAGE_VERSION: "${{ steps.calculate_version.outputs.new_version }}"
           DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
+        run: ./gradlew bootBuildImage
+
+      - name: Build & push docker image
+        if: steps.version_increment.outputs.bump != 'none'
+        env:
+          DOCKER_REGISTRY: ${{ vars.DOCKER_ARTIFACT_REGISTRY }}
+          DOCKER_NAMESPACE: ${{ vars.DOCKER_ARTIFACT_NAMESPACE }}
+          DOCKER_IMAGE_VERSION: "${{ steps.calculate_version.outputs.new_version }}"
+          DOCKER_USERNAME: _json_key
+          DOCKER_PASSWORD: ${{ secrets.GCP_SA_KEY }}
         run: ./gradlew bootBuildImage
 
       - name: Create GitHub Release
