Add name to the payload

--- a/.github/workflows/pull-request-pipeline.yml
+++ b/.github/workflows/pull-request-pipeline.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       SPRING_PROFILES_ACTIVE: local
+      BP_SPRING_PROFILES_ACTIVE: local
 
     steps:
       - name: Check out the repository
