--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=core
-spring.profiles.active=prod
+spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.database=${MONGODB_DB}
+GCP_PROJECT=${GCP_PROJECT}
+PUBSUB_TOPIC=${PUBSUB_TOPIC}
