--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,2 +1,10 @@
 spring.application.name=core-test
 spring.profiles.active=test
+
+spring.autoconfigure.exclude=\
+   org.springframework.boot.autoconfigure.mongo.MongoAutoConfiguration,\
+   org.springframework.boot.autoconfigure.data.mongo.MongoDataAutoConfiguration
+
+spring.autoconfigure.exclude+=,\
+   com.google.cloud.spring.autoconfigure.core.GcpContextAutoConfiguration,\
+   com.google.cloud.spring.autoconfigure.pubsub.GcpPubSubAutoConfiguration
