--- a/.github/workflows/post-commit-pipeline.yml
+++ b/.github/workflows/post-commit-pipeline.yml
@@ -11,6 +11,9 @@ permissions:
 jobs:
   build_test_release:
     runs-on: ubuntu-22.04
+    env:
+      SPRING_PROFILES_ACTIVE: test
+      BP_SPRING_PROFILES_ACTIVE: test
     outputs:
       new-version: ${{ (steps.version_increment.outputs.bump != 'none' && steps.calculate_version.outputs.new_version) || '' }}
     steps:
