--- a/.github/workflows/pull-request-pipeline.yml
+++ b/.github/workflows/pull-request-pipeline.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-test-pipeline:
+  build-and-test:
     runs-on: ubuntu-22.04
     env:
       SPRING_PROFILES_ACTIVE: local
@@ -22,3 +22,39 @@ jobs:
 
       - name: Build & Test
         run: ./gradlew clean build
+
+  sonar-cloud:
+    runs-on: ubuntu-22.04
+    needs: build-and-test
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v4
+
+      - name: Cache Sonar packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+
+      - name: Upload SonarCloud report
+        uses: SonarSource/sonarqube-scan-action@v5.2.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+           args: -Dsonar.qualitygate.wait=true
+
+  lint:
+    runs-on: ubuntu-22.04
+    needs: build-and-test
+    permissions:
+      contents: read
+      pull-requests: write
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Run Super-Linter
+        uses: super-linter/super-linter@v7.4.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
