--- a/.github/workflows/pull-request-pipeline.yml
+++ b/.github/workflows/pull-request-pipeline.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build-and-test:
+  build-and-test-pipeline:
     runs-on: ubuntu-22.04
     env:
       SPRING_PROFILES_ACTIVE: local
