feat: add sonar cloud and linter (#20)

--- a/.github/workflows/pull-request-pipeline.yml
+++ b/.github/workflows/pull-request-pipeline.yml
@@ -22,3 +22,6 @@ jobs:
 
       - name: Build & Test
         run: ./gradlew clean build
+
+      - name: Spotless Check
+        run: ./gradlew spotlessCheck
